# openenclave

api/: enclave_8h_a3b75c5638360adca181a0d945b45ad86.html  enclave_8h_source.html  verifier_8h_aacfe66772130a7561f557fee262c218f.html  verifier_8h_source.html
docs/DesignDocs/: SealingAPI.md
docs/GettingStartedDocs/: IntelSDKPortingGuideLinux.md
enclave/: CMakeLists.txt  seal.c
enclave/core/sgx/: keys.c
enclave/crypto/: CMakeLists.txt  gcm.c
host/sgx/: create.c  sgxload.c  sgxload.h
include/openenclave/: enclave.h
include/openenclave/bits/: seal.h
include/openenclave/bits/sgx/: seal.h  sgxproperties.h
include/openenclave/internal/crypto/: gcm.h
include/openenclave/internal/sgx/: sgxproperties.h
tests/: CMakeLists.txt
tests/props/enc/: custom_props.c
tests/sealing/: CMakeLists.txt  sealing.edl
tests/sealing/enc/: CMakeLists.txt  enc.c  v1.conf  v2.conf
tests/sealing/host/: CMakeLists.txt  host.cpp
